src/test/ui/rfc-2093-infer-outlives/explicit-projection.stderr
error: rustc_outlives
  --> $DIR/explicit-projection.rs:8:1
   |
LL | / struct Foo<'a, A, B> where A: Trait<'a, B>
LL | | {
LL | |     foo: <A as Trait<'a, B>>::Type
LL | | }
   | |_^
   |
   = note: B : 'a

error: aborting due to previous error

